components/icon/icon.css
@import "../global/variables.css";

.icon {
  position: relative;

  display: inline-block;

  vertical-align: middle;
  fill: currentColor;
}

.glyph > svg {
  display: inline-block;

  vertical-align: middle;
  pointer-events: none;
}

.gray {
  color: var(--ring-icon-secondary-color);
}

.hover {
  color: var(--ring-icon-hover-color);
}

.green {
  color: var(--ring-icon-success-color);
}

.magenta {
  color: var(--ring-link-hover-color);
}

.red {
  color: var(--ring-icon-error-color);
}

.blue {
  color: var(--ring-main-color);
}

.white {
  color: var(--ring-dark-text-color);
}

.loading {
  animation-name: icon-loading;
  animation-duration: 1200ms;
  animation-iteration-count: infinite;
}

@keyframes icon-loading {
  0% {
    transform: scale(1);
  }

  50% {
    transform: scale(0.9);

    opacity: 0.5;
  }

  100% {
    transform: scale(1);
  }
}

